--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-cron": "^3.0.3",
     "ollama": "^0.5.10",
     "openai": "^4.67.1",
-    "url-join": "^4.0.1"
+    "url-join": "^4.0.1",
+    "zod": "^3.25.76"
   }
 }
