--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,14 @@ MYSQL_PASSWORD=
 MYSQL_PORT=3306
 MYSQL_DATABASE=chatbot
 
-REDDIT_CLIENT_ID=""
-REDDIT_CLIENT_SECRET=""
-REDDIT_USER_AGENT="nodejs:subfetcher:v1.0.0 (by /u/username)"
-REDDIT_USERNAME=""
-REDDIT_PASSWORD=""
+REDDIT_CLIENT_ID=
+REDDIT_CLIENT_SECRET=
+REDDIT_USER_AGENT="nodejs:f2a-discussion-discovery:v1.0.0 (by /u/askbobai)"
+REDDIT_USERNAME=
+REDDIT_PASSWORD=
 REDDIT_REDIRECT_URI=
 
-OPENAI_API_KEY=""
+AZURE_ENDPOINT=
+AZURE_API_KEY=
+AZURE_MODEL_NAME="o3-mini"
 OLLAMA_HOST="http://host.docker.internal:11434"
